version/0.31/_sources/api/solver/_autosummary/settings/internal.rst.txt
:orphan:

.. _internal:

internal
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.internal
    :show-inheritance:

.. rubric:: Attributes

==================================================   =============================

Attribute                                                                  Summary

==================================================   =============================
:ref:`pcb_zone_info <pcb_zone_info>`                           Help not available.

:ref:`pcb_model <pcb_model>`                                        PCB Model ON?.

:ref:`vapor_phase_realgas <vapor_phase_realgas>`             Zone real-gas state:.

:ref:`active_wetsteam_zone <active_wetsteam_zone>`       Is Active Wetsteam Zone?.

:ref:`contact_property <contact_property>`               Contact Property Thread?.

==================================================   =============================

.. rubric:: Included in:

======================================   ======================================

Parent                                                                  Summary

======================================   ======================================
:ref:`solid_2_child <solid_2_child>`              'child_object_type' of solid.

:ref:`phase_1_child <phase_1_child>`              'child_object_type' of phase.

:ref:`settings_29 <settings_29>`             Domain name to define settings on.

:ref:`phase_52_child <phase_52_child>`            'child_object_type' of phase.

======================================   ======================================

